Fix gap above nav bar

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,3 +140,7 @@ footer {
 footer h5 {
   text-align: left;
 }
+
+body {
+  margin: 0;
+}
